# KisPyGenerators2

./: .coverage  .flake8  pyproject.toml  readme.md
.github/workflows/: flake8.yml  unittest.yml
src/: exercise.py  meta.py  tasks.py
src/kipygen/: __init__.py  checkers.py  checkhooks.py  exercise.py  meta.py  tasks.py
tests/: test_calculator.py  test_exercise.py  test_exercise_samples.py
tests/exercise/: test_exercise.py  test_exercise_samples.py
tests/tasks/: test_binary_sum.py  test_calculator.py  test_concat.py  test_password.py  test_range.py
