[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KiPyGen"
version = "1.0"
requires-python = ">=3.7"
authors = [
    {name = "Articha"}
]
readme = "readme.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education"
]

[tool.hatch.build]
packages = ["src/kipygen"]

[tool.coverage.run]
include = [
    "src/*"
]

[tool.coverage.json]
output = ".github/workflows/coverage/info.json"
